--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h3 {
 button {
     padding: 10px 15px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: green; 
     color: white;
     font-size: 10px;
@@ -31,6 +31,15 @@ button {
 
 button:hover {
     background-color: rgb(45, 193, 45); 
+}
+
+#clearListBtn {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(202, 15, 15); 
+    color: white;
+    font-size: 10px;
 }
 
 #kontaktLista {
